upload any type file with asp and php

--- a/app/src/main/res/layout/activity_image_upload_aspservice.xml
+++ b/app/src/main/res/layout/activity_image_upload_aspservice.xml
@@ -24,8 +24,15 @@
         android:layout_height="wrap_content" />
 
     <Button
-        android:id="@+id/btnBrowse"
+        android:id="@+id/btnBrowseImage"
         android:text="Browse"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+    <Button
+        android:id="@+id/btnBrowse"
+        android:text="Browse any file"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
